--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     and expand my expertise in both frontend and backend development.
                 </p>
                 <a class="hire" href="">Hire me</a>
-                <a class="res" href="images/Resume(jegan).pdf">Resume</a>
+                <a class="res" href="Resume(jegan).pdf">Resume</a>
 
                 <div class="social">
                     <a class="med" href="https://www.linkedin.com/in/jeganm23/"><i class='bx bxl-linkedin'></i></a>
